# codex-shim

./: README.md  pyproject.toml
codex_shim/: __init__.py  bedrock_stream.py  catalog.py  cli.py  server.py  settings.py  translate.py
codex_shim/prompts/: codex_style.md  codex_style_anthropic.md  codex_style_generic.md  codex_style_openai.md
tests/: test_bedrock_stream.py  test_server.py  test_settings_catalog.py  test_translate.py
