[project]
name = "codex-shim"
version = "0.1.0"
description = "Opt-in BYOK shim that exposes custom models in Codex Desktop's picker."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
codex-shim = "codex_shim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

