[project]
name = "codex-shim"
version = "0.1.0"
description = "Opt-in BYOK shim that exposes custom models in Codex Desktop's picker."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
codex-shim = "codex_shim.cli:main"

# Ship bundled prompt files alongside the Python source so they survive
# `pip install` and aren't lost when the package is moved out of an
# editable checkout.
[tool.setuptools.package-data]
codex_shim = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

